--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
           </ul>
 
           <!-- btn dung thẻ a để đăng ký và đăng nhập-->
-          <div class="me-2">
+          <div class="me-2 d-flex flex-column gap-1 flex-md-row ">
             <a
               href="#!"
-              class="btn btn-danger d-inline-flex justify-content-center align-items-center"
+              class="btn btn-danger d-inline-flex justify-content-center align-items-center text-nowrap "
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -78,7 +78,7 @@
 
             <a
               href="#!"
-              class="btn btn-warning d-inline-flex justify-content-center align-items-center"
+              class="btn btn-warning d-inline-flex justify-content-center align-items-center text-nowrap"
             >
               <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" class="me-2" viewBox="0 0 512 512">
                
@@ -91,7 +91,7 @@
           </div>
 
           <!-- form search   -->
-          <form class="d-flex" role="search">
+          <form class="d-flex mt-2 mt-lg-0" role="search">
             <input
               class="form-control me-2"
               type="search"
