--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- my styles -->
     <link rel="stylesheet" href="./mystyles.css" />
   </head>
-  <body>
+  <body class="bg-light">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-light border-bottom">
       <div class="container">
@@ -57,10 +57,10 @@
           </ul>
 
           <!-- btn dung thẻ a để đăng ký và đăng nhập-->
-          <div class="me-2 d-flex flex-column gap-1 flex-md-row ">
+          <div class="me-2 d-flex flex-column gap-1 flex-md-row">
             <a
               href="#!"
-              class="btn btn-danger d-inline-flex justify-content-center align-items-center text-nowrap "
+              class="btn btn-danger d-inline-flex justify-content-center align-items-center text-nowrap"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -80,8 +80,13 @@
               href="#!"
               class="btn btn-warning d-inline-flex justify-content-center align-items-center text-nowrap"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" class="me-2" viewBox="0 0 512 512">
-               
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16px"
+                height="16px"
+                class="me-2"
+                viewBox="0 0 512 512"
+              >
                 <path
                   d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                 />
@@ -118,6 +123,46 @@
         </div>
       </div>
     </nav>
+<!-- navbar end -->
+
+    <!-- header start-->
+<header class="main-header py-5 border-bottom">
+<div class="container">
+  <div class="row align-items-center gx-md-5">
+    <!-- khối trái -->
+<div class="col-md-6">
+<h1 class="fs-3 fw-normal">Code, Creativity, and Connection: The Heartbeat of Tomorrow’s Technological Frontier
+
+</h1>
+<p class="fs-5 fw-light text-secondary">"In a world driven by digital innovation, the fusion of code, creativity, and human connection forms the pulse of a future where technology doesn’t just serve — it inspires."</p>
+ <a
+              href="#!"
+              class="btn btn-success d-inline-flex justify-content-center align-items-center text-nowrap"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16px"
+                height="16px"
+                class="me-2"
+                viewBox="0 0 448 512" fill="#fff"
+              >
+                <path
+                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
+                />
+              </svg>
+              Sign-Up to Get Started
+            </a>
+</div>
+<!-- khối phải -->
+ <div class="col-md-6 mt-2 mt-md-0">
+<div>
+  <img class="rounded w-100" src="./img/main-header.jpg" alt="">
+</div>
+ </div>
+  </div>
+</div>
+</header>
+<!-- header end -->
     <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
