--- a/index.html
+++ b/index.html
@@ -163,6 +163,54 @@
 </div>
 </header>
 <!-- header end -->
+
+<!-- features -->
+ <section class="py-4 border-bottom">
+   <div class="container">
+    <div class="row ">
+      <!-- item -->
+      <div class="col-md-4 ">
+<div class="feature-item bg-white  border rounded p-3 d-flex align-items-center h-100 " >
+  <div>
+    <img   style="width: 50px; " src="./img/clock.png" alt="">
+  </div>
+  <div class="ms-2">
+    <h3 class="fs-5">Tech it to the Limit</h3>
+    <p class="small text-secondary">We push tech to its edge — to innovate, to disrupt, to lead.</p>
+  </div>
+</div>
+
+      </div>
+<div class="col-md-4 ">
+<div class="feature-item bg-white  border rounded p-3 d-flex align-items-center mt-2 mt-md-0 h-100" >
+  <div>
+    <img   style="width: 50px; " src="./img/responsive.png" alt="">
+  </div>
+  <div class="ms-2">
+    <h3 class="fs-5">Digital Renaissance</h3>
+    <p class="small text-secondary">A new era of innovation where creativity meets code and ideas shape the future."
+
+</p>
+  </div>
+</div>
+
+      </div>
+      <div class="col-md-4 ">
+<div class="feature-item bg-white  border rounded p-3 d-flex align-items-center mt-2 mt-md-0 h-100" >
+  <div>
+    <img   style="width: 50px; " src="./img/tick.png" alt="">
+  </div>
+  <div class="ms-2">
+    <h3 class="fs-5"> The Future is Coded</h3>
+    <p class="small text-secondary">Tomorrow is written in code — line by line, idea by idea</p>
+  </div>
+</div>
+
+      </div>  
+    </div>
+   </div>
+ </section>
+
     <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
