--- a/index.html
+++ b/index.html
@@ -540,6 +540,58 @@
         </div>
       </div>
     </section>
+
+    <!-- other content -->
+<header class="main-header py-5 border-bottom">
+      <div class="container">
+        <div class="row align-items-center gx-md-5">
+          <!-- khối trái -->
+          <div class="col-md-6">
+            <h2 class="fs-5">
+              Code, Creativity, and Connection: The Heartbeat of Tomorrow’s
+              Technological Frontier
+            </h2>
+            <p class="small text-secondary">
+              "In a world driven by digital innovation, the fusion of code,
+              creativity, and human connection forms the pulse of a future where
+              technology doesn’t just serve — it inspires."
+            </p>
+<h2 class="fs-5">Code, Creativity, and Connection: The Heartbeat of Tomorrow’s
+              Technological Frontier</h2>
+          <p class="small text-secondary""> "In a world driven by digital innovation, the fusion of code,
+              creativity, and human connection forms the pulse of a future where
+              technology doesn’t just serve — it inspires."</p>
+            <a
+              href="#!"
+              class="btn btn-success d-inline-flex justify-content-center align-items-center text-nowrap"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16px"
+                height="16px"
+                class="me-2"
+                viewBox="0 0 448 512"
+                fill="#fff"
+              >
+                <path
+                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
+                />
+              </svg>
+              Sign-Up to Get more info
+            </a>
+          </div>
+          <!-- khối phải -->
+          <div class="col-md-6 mt-2 mt-md-0">
+            <div>
+              <img class="rounded w-100" src="./img/main-header.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- footer -->
+
     <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
