--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="bg-light">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-light border-bottom">
+    <nav class="navbar navbar-expand-lg bg-light border-bottom fixed-top">
       <div class="container">
         <!-- navbar brand -->
         <a class="navbar-brand" href="#">
@@ -590,7 +590,50 @@
       </div>
     </header>
 
-    <!-- footer -->
+    <!-- subcribe -->
+<section class="py-5 subcribe">
+<div class="container">
+  <div class="row justify-content-center">
+<div class="col-md-4">
+  <div class="text-center mb-3 mb-md-0">
+    <h5 class="text-white text-md-end fs-4 fw-light">Subcribe for newsletters</h5>
+  </div>
+</div>
+<div class="col-md-4">
+    <!-- form subcribe   -->
+          <form class="d-flex mt-2 mt-lg-0" role="search">
+           <div class="input-group">
+             <input
+              class="form-control "
+              type="email"
+              placeholder="Your email"
+              aria-label="Search"
+            />
+            <button
+              class="btn btn-outline-success border-dark bg-info d-inline-flex align-items-center"
+              type="submit"
+            >
+              <svg class="me-2" width="16px" height="16px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+            Subcribe
+            </button>
+           </div>
+          </form>
+</div>
+  </div>
+</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- js bootstrap -->
     <script
