--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 5</title>
-    <!-- css bootstrap -->
-    <link
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+      <!-- css bootstrap -->
+       <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
@@ -13,8 +13,8 @@
     />
     <!-- my styles -->
     <link rel="stylesheet" href="./mystyles.css" />
-  </head>
-  <body class="bg-light">
+</head>
+<body class="bg-light">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-light border-bottom fixed-top">
       <div class="container">
@@ -125,7 +125,7 @@
     </nav>
     <!-- navbar end -->
 
-    <!-- header start-->
+     <!-- header start-->
     <header class="main-header py-5 border-bottom mt-5">
       <div class="container">
         <div class="row align-items-center gx-md-5">
@@ -140,23 +140,15 @@
               creativity, and human connection forms the pulse of a future where
               technology doesn’t just serve — it inspires."
             </p>
-            <a
+         <a
               href="#!"
               class="btn btn-success d-inline-flex justify-content-center align-items-center text-nowrap"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16px"
-                height="16px"
-                class="me-2"
-                viewBox="0 0 448 512"
-                fill="#fff"
-              >
-                <path
-                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
-                />
-              </svg>
-              Sign-Up to Get Started
+             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-check-fill me-2" viewBox="0 0 16 16">
+                                <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 4.697v4.974A4.491 4.491 0 0 0 12.5 8a4.49 4.49 0 0 0-1.965.45l-.338-.207L16 4.697Z"></path>
+                                <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"></path>
+                            </svg>
+              Sign-Up to New Letters
             </a>
           </div>
           <!-- khối phải -->
@@ -170,141 +162,71 @@
     </header>
     <!-- header end -->
 
-    <!-- features -->
-    <section class="py-4 border-bottom">
-      <div class="container">
-        <div class="row">
-          <!-- item 1 -->
-          <div class="col-md-4">
-            <div
-              class="feature-item bg-white border rounded p-3 d-flex align-items-center h-100"
-            >
-              <div>
-                <img style="width: 50px" src="./img/clock.png" alt="" />
-              </div>
-              <div class="ms-2">
-                <h3 class="fs-5">Tech it to the Limit</h3>
-                <p class="small text-secondary">
-                  We push tech to its edge — to innovate, to disrupt, to lead.
-                </p>
-              </div>
-            </div>
-          </div>
-          <!-- item 2 -->
-          <div class="col-md-4 mt-2 mt-md-0">
-            <div
-              class="feature-item bg-white border rounded p-3 d-flex align-items-center h-100"
-            >
-              <div>
-                <img style="width: 50px" src="./img/responsive.png" alt="" />
-              </div>
-              <div class="ms-2">
-                <h3 class="fs-5">Digital Renaissance</h3>
-                <p class="small text-secondary">
-                  A new era of innovation where creativity meets code and ideas
-                  shape the future."
-                </p>
-              </div>
-            </div>
-          </div>
-          <!-- item 3 -->
-          <div class="col-md-4 mt-2 mt-md-0">
-            <div
-              class="feature-item bg-white border rounded p-3 d-flex align-items-center h-100"
-            >
-              <div>
-                <img style="width: 50px" src="./img/tick.png" alt="" />
-              </div>
-              <div class="ms-2">
-                <h3 class="fs-5">The Future is Coded</h3>
-                <p class="small text-secondary">
-                  Tomorrow is written in code — line by line, idea by idea
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- course -->
-    <section class="py-4 border-bottom">
-      <!-- row top -->
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-5">
-            <div class="text-md-center">
-              <h4 class="fs-5">Wired Minds, Limitless Ideas</h4>
-              <p class="small text-secondary">
-                When brilliant minds are wired together, they ignite limitless
-                ideas that reshape our digital world.
-              </p>
-              <a
-                href="#!"
-                class="btn btn-success d-inline-flex justify-content-center align-items-center text-nowrap"
-              >
-                <svg
-                  width="16px"
-                  height="16px"
-                  class="me-2"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 448 512"
-                  fill="#fff"
-                >
-                  <path
-                    d="M219.3 .5c3.1-.6 6.3-.6 9.4 0l200 40C439.9 42.7 448 52.6 448 64s-8.1 21.3-19.3 23.5L352 102.9l0 57.1c0 70.7-57.3 128-128 128s-128-57.3-128-128l0-57.1L48 93.3l0 65.1 15.7 78.4c.9 4.7-.3 9.6-3.3 13.3s-7.6 5.9-12.4 5.9l-32 0c-4.8 0-9.3-2.1-12.4-5.9s-4.3-8.6-3.3-13.3L16 158.4l0-71.8C6.5 83.3 0 74.3 0 64C0 52.6 8.1 42.7 19.3 40.5l200-40zM111.9 327.7c10.5-3.4 21.8 .4 29.4 8.5l71 75.5c6.3 6.7 17 6.7 23.3 0l71-75.5c7.6-8.1 18.9-11.9 29.4-8.5C401 348.6 448 409.4 448 481.3c0 17-13.8 30.7-30.7 30.7L30.7 512C13.8 512 0 498.2 0 481.3c0-71.9 47-132.7 111.9-153.6z"
-                  />
-                </svg>
-                View ALL Courses
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <section class="py-4 border-bottom pb-5">
+     
       <!-- row course -->
       <div class="container">
-        <div class="row mt-4">
+        <div class="row mt-4 flex-row-reverse">
           <!-- khối trái -->
           <div class="col-md-3">
             <div class="list-group small">
               <div class="list-group-item text-bg-light fw-bold">
-                Course Categories
+                Archives
               </div>
               <a
                 class="list-group-item d-flex justify-content-between align-items-center"
                 href="#!"
-                >Premium Courses
+                >2022
                 <span class="badge text-bg-warning rounded-pill">14</span>
               </a>
               <a
                 class="list-group-item d-flex justify-content-between align-items-center"
                 href="#!"
-                >Free Courses
-                <span class="badge text-bg-warning rounded-pill">1</span>
+                >2023
+                <span class="badge text-bg-warning rounded-pill">46</span>
+              </a>
+              <a
+                class="list-group-item d-flex justify-content-between align-items-center"
+                href="#!"
+                >2024
+                <span class="badge text-bg-warning rounded-pill">71</span>
+              </a>
+              <a
+                class="list-group-item d-flex justify-content-between align-items-center"
+                href="#!"
+                >2025
+                <span class="badge text-bg-warning rounded-pill">8</span>
               </a>
             </div>
 
             <div class="list-group mt-3 small">
               <div class="list-group-item text-bg-light fw-bold">
-                Course by Topics
+                Categories
               </div>
               <a
                 class="list-group-item d-flex justify-content-between align-items-center"
                 href="#!"
-                >Coding
-                <span class="badge text-bg-warning rounded-pill">14</span>
+                >Tech
+                <span class="badge text-bg-warning rounded-pill">46</span>
               </a>
               <a
                 class="list-group-item d-flex justify-content-between align-items-center"
                 href="#!"
-                >Programming
-                <span class="badge text-bg-warning rounded-pill">1</span>
+                >Tutorials
+                <span class="badge text-bg-warning rounded-pill">15</span>
               </a>
               <a
                 class="list-group-item d-flex justify-content-between align-items-center"
                 href="#!"
-                >Design
-                <span class="badge text-bg-warning rounded-pill">1</span>
+                >Tips and Tricks
+                <span class="badge text-bg-warning rounded-pill">12</span>
+              </a>
+              <a
+                class="list-group-item d-flex justify-content-between align-items-center"
+                href="#!"
+                >Product Reviews
+                <span class="badge text-bg-warning rounded-pill">42</span>
               </a>
             </div>
           </div>
@@ -321,7 +243,7 @@
                 >
               </div>
               <!-- item 1 -->
-              <a href="./single-course.html" class="list-group-item">
+              <a href="./single-course.html" class="list-group-item hover-shadow    ">
                 <div class="row align-items-center">
                   <div class="col-md-4">
                     <div>
@@ -364,7 +286,7 @@
                 </div>
               </a>
               <!-- item 2 -->
-              <a href="./single-course.html" class="list-group-item">
+              <a href="./single-course.html" class="list-group-item   ">
                 <div class="row align-items-center">
                   <div class="col-md-4">
                     <div>
@@ -407,7 +329,7 @@
                 </div>
               </a>
               <!-- item 3 -->
-              <a href="./single-course.html" class="list-group-item">
+              <a href="./single-course.html" class="list-group-item   ">
                 <div class="row align-items-center">
                   <div class="col-md-4">
                     <div>
@@ -450,7 +372,7 @@
                 </div>
               </a>
               <!-- item 4 -->
-              <a href="./single-course.html" class="list-group-item">
+              <a href="./single-course.html" class="list-group-item    ">
                 <div class="row align-items-center">
                   <div class="col-md-4">
                     <div>
@@ -505,7 +427,7 @@
                     </div>
                   </div>
 
-                  <div class="col-md-8">
+                  <div class="col-md-8 ">
                     <h5>When Silicon Meets Soul</h5>
                     <p class="text-secondary">
                       Technology becomes truly powerful when logic meets
@@ -541,57 +463,12 @@
       </div>
     </section>
 
-    <!-- other content -->
-<header class="main-header py-5 border-bottom">
-      <div class="container">
-        <div class="row align-items-center gx-md-5">
-          <!-- khối trái -->
-          <div class="col-md-6">
-            <h2 class="fs-5">
-              Code, Creativity, and Connection: The Heartbeat of Tomorrow’s
-              Technological Frontier
-            </h2>
-            <p class="small text-secondary">
-              "In a world driven by digital innovation, the fusion of code,
-              creativity, and human connection forms the pulse of a future where
-              technology doesn’t just serve — it inspires."
-            </p>
-<h2 class="fs-5">Code, Creativity, and Connection: The Heartbeat of Tomorrow’s
-              Technological Frontier</h2>
-          <p class="small text-secondary""> "In a world driven by digital innovation, the fusion of code,
-              creativity, and human connection forms the pulse of a future where
-              technology doesn’t just serve — it inspires."</p>
-            <a
-              href="#!"
-              class="btn btn-success d-inline-flex justify-content-center align-items-center text-nowrap"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16px"
-                height="16px"
-                class="me-2"
-                viewBox="0 0 448 512"
-                fill="#fff"
-              >
-                <path
-                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
-                />
-              </svg>
-              Sign-Up to Get more info
-            </a>
-          </div>
-          <!-- khối phải -->
-          <div class="col-md-6 mt-2 mt-md-0">
-            <div>
-              <img class="rounded w-100" src="./img/main-header.jpg" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
 
-    <!-- subcribe -->
-<section class="py-5 subcribe">
+
+ 
+
+<!-- subcribe -->
+<section class="py-5 subcribe pt-5">
 <div class="container">
   <div class="row justify-content-center">
 <div class="col-md-4">
@@ -719,18 +596,13 @@ daicahieu1710@gmail.com</p>
      <svg width="16px" height="16px" fill="currentColor" class=" me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
       Sign-up for Free
     </a>
- </div>
+ </div>    
 
-
-
-
-
-
-    <!-- js bootstrap -->
+      <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-  </body>
+</body>
 </html>
