--- a/faq.html
+++ b/faq.html
@@ -12,10 +12,9 @@
       crossorigin="anonymous"
     />
     <!-- my styles -->
-   <link rel="stylesheet" href="./mystyles.css">
+    <link rel="stylesheet" href="./mystyles.css" />
   </head>
-  <body class="bg-light">
-      
+  <body class="bg-light pt-5">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-light border-bottom fixed-top">
       <div class="container">
@@ -126,103 +125,169 @@
     </nav>
     <!-- navbar end -->
 
-     <!-- header start-->
-    <header class="main-header py-5 border-bottom mt-5">
-      <div class="container">
-        <div class="row align-items-center gx-md-5">
-          <!-- khối trái -->
-          <div class="col-md-6">
-            <h1 class="fs-3 fw-normal">
-              Code, Creativity, and Connection: The Heartbeat of Tomorrow’s
-              Technological Frontier
-            </h1>
-            <p class="fs-5 fw-light text-secondary">
-              "In a world driven by digital innovation, the fusion of code,
-              creativity, and human connection forms the pulse of a future where
-              technology doesn’t just serve — it inspires."
-            </p>
-            <a
-              href="#!"
-              class="btn btn-success d-inline-flex justify-content-center align-items-center text-nowrap"
+  
+<!-- faq header -->
+ <header class="py-5 border-bottom">
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- trái -->
+            <div class="col-md-6">
+<div class="breadcrumb-holder">
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <ol class="breadcrumb border d-inline-flex px-3 py-1 rounded-pill align-items-center">
+    <li class="breadcrumb-item "><a class="text-decoration-none small" href="#">Home</a></li>
+    <li class="breadcrumb-item active small" aria-current="page">FAQ</li>
+  </ol>
+</nav>
+</div>
+<div class="header-content">
+    <h1 class="fs-3 fw-normal">Lorem ipsum dolor sit amet consectetur.
+</h1>
+    <p class="fs-6 small fw-light text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quia natus amet! Amet reiciendis alias perspiciatis vel, nostrum officia iste illum fugiat distinctio tenetur molestiae incidunt repellat quisquam ratione vero!</p>
+<div class="search w-75">
+     <!-- form search   -->
+          <form class="d-flex mt-2 mt-lg-0 input-group" role="search">
+            <input
+              class="form-control "
+              type="search"
+              placeholder="Search for..."
+              aria-label="Search"
+            />
+            <button
+              class="btn btn-outline-success border-dark bg-info"
+              type="submit"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
                 width="16px"
                 height="16px"
-                class="me-2"
-                viewBox="0 0 448 512"
-                fill="#fff"
               >
                 <path
-                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
+                  fill="#FFD43B"
+                  d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                 />
               </svg>
-              Sign-Up to Get Started
-            </a>
-          </div>
-          <!-- khối phải -->
-          <div class="col-md-6 mt-2 mt-md-0">
-            <div>
-              <img class="rounded w-100" src="./img/main-header.jpg" alt="" />
+            </button>
+          </form>
+</div>
+</div>
             </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- header end -->
-
-<!-- content -->
- <section class="py-4 mb-2">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="text-center pb-2">
-                    <h3 class="fs-4 fw-normal">WELCOME to Hieucutehatle</h3>
-                    <p class="text-secondary small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cum sint nobis accusamus at voluptatibus rerum provident eius. Iusto reiciendis quod blanditiis optio commodi, recusandae nulla aliquam repellendus pariatur! At?</p>
- <a href="#!" class="btn btn-success d-inline-flex align-items-center">
-<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-text me-2" viewBox="0 0 16 16">
-                                <path d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"></path>
-                                <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"></path>
-                            </svg>
-    Read about our journey
- </a>               
+            <!-- phải -->
+            <div class="col-md-6 mt-2 mt-md-0">
+                <div>
+                    <img class="rounded w-100" src="./img/main-header.jpg" alt="Logo">
                 </div>
             </div>
         </div>
     </div>
- </section>
+ </header>
 
- <!-- about content -->
-<section class="py-4 mb-3">
+<!-- FAQ list -->
+<section class="faq-list py-5">
     <div class="container">
-        <div class="row align-items-center gx-5">
-            <!-- item1 -->
-            <div class="col-md-4 mb-3 mb-md-0">
-<div>
-    <img src="./img/main-header.jpg" class="rounded img-fluid  mb-md-3 mb-0" alt="Logo">
-</div>
+        <div class="row">
+            <!-- list question -->
+            <div class="col-md-8">
+                <!-- item 1 -->
+<details class="card text-bg-light mb-3 small">
+    <summary class="card-header">
+Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </summary>
+    <div class="card-body">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi earum, odit, placeat, esse alias sunt quisquam repudiandae molestias reprehenderit corporis tenetur in laboriosam voluptatum debitis aliquid ab dolorem quae!</p>
+    </div>
+</details>
+<!-- item 2 -->
+<details class="card text-bg-light mb-3 small">
+    <summary class="card-header">
+Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </summary>
+    <div class="card-body">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi earum, odit, placeat, esse alias sunt quisquam repudiandae molestias reprehenderit corporis tenetur in laboriosam voluptatum debitis aliquid ab dolorem quae!</p>
+    </div>
+</details>
+<!-- item 3 -->
+<details class="card text-bg-light mb-3 small">
+    <summary class="card-header">
+Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </summary>
+    <div class="card-body">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi earum, odit, placeat, esse alias sunt quisquam repudiandae molestias reprehenderit corporis tenetur in laboriosam voluptatum debitis aliquid ab dolorem quae!</p>
+    </div>
+</details>
+<!-- item 4 -->
+<details class="card text-bg-light mb-3 small">
+    <summary class="card-header">
+Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </summary>
+    <div class="card-body">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi earum, odit, placeat, esse alias sunt quisquam repudiandae molestias reprehenderit corporis tenetur in laboriosam voluptatum debitis aliquid ab dolorem quae!</p>
+    </div>
+</details>
+<!-- item 5 -->
+<details class="card text-bg-light mb-3 small">
+    <summary class="card-header">
+Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </summary>
+    <div class="card-body">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi earum, odit, placeat, esse alias sunt quisquam repudiandae molestias reprehenderit corporis tenetur in laboriosam voluptatum debitis aliquid ab dolorem quae!</p>
+    </div>
+</details>
             </div>
-            <!-- item 2 -->
+            <!-- post question -->
             <div class="col-md-4">
-                <div >
-                    <p class="text-secondary small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, dolorem voluptas alias animi beatae quibusdam ab iusto minima corrupti dolores, incidunt laborum laboriosam facere cum, veritatis dolore? Sed, ratione doloribus?</p>
-                    <p class="text-secondary small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, dolorem voluptas alias animi beatae quibusdam ab iusto minima corrupti dolores, incidunt laborum laboriosam facere cum, veritatis dolore? Sed, ratione doloribus?</p>
+                <div class="card">
+                    <div class="card-header text-bg-primary p-2 ">
+Post your question
+                    </div>
+                    <div class="card-body">
+                        <form action="#">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="mb-2">
+                                        <input placeholder="Name" type="text" name="" id="" class="form-control form-control-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="mb-2">
+                                        <input placeholder="Email" type="email" name="" id="" class="form-control form-control-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="mb-2">
+                                        <input placeholder="Your Question Title" type="text" name="" id="" class="form-control form-control-sm">
+                                    </div>
+                                </div>
+                               
+                                <div class="col-md-12 ">
+                                    <div class="mb-2">
+                                     <textarea rows="5" class="form-control form-control-sm" name="" id="">Question in Detail</textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 ">
+                                    <div class="mb-2">
+                                    <button
+              class="btn btn-outline-success border-dark bg-info d-inline-flex align-items-center w-100 justify-content-center"
+              type="submit"
+            >
+             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle-fill me-2" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"></path>
+                                                </svg>
+            Post Question   
+            </button>
+                                    </div>
+                                </div>
 
-                </div>
-
-            </div>
-            <!-- item 3 -->
-            <div class="col-md-4">
-                <div>
-             <p class="text-secondary small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, dolorem voluptas alias animi beatae quibusdam ab iusto minima corrupti dolores, incidunt laborum laboriosam facere cum, veritatis dolore? Sed, ratione doloribus?</p>
-              <p class="text-secondary small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, dolorem voluptas alias animi beatae quibusdam ab iusto minima corrupti dolores, incidunt laborum laboriosam facere cum, veritatis dolore? Sed, ratione doloribus?</p>        
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-<!-- subcribe -->
+    <!-- subcribe -->
 <section class="py-5 subcribe">
 <div class="container">
   <div class="row justify-content-center">
@@ -352,17 +417,17 @@ daicahieu1710@gmail.com</p>
       Sign-up for Free
     </a>
  </div>
-    <!-- js bootstrap -->
-     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+
+
+
+
+
     <!-- js bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+  </body>
 </html>
