--- a/courses.html
+++ b/courses.html
@@ -43,16 +43,16 @@
               <a class="nav-link active" aria-current="page" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Course</a>
+              <a class="nav-link active" aria-current="page" href="./courses.html">Course</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">FAQ</a>
+              <a class="nav-link" href="./faq.html">FAQ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
           </ul>
 
